--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         /* UPDATED: New column widths for 4 columns */
         #data-table th:first-child,
         #data-table td:first-child {
-            width: 25%; /* Option Label */
+            width: 30%; /* Option Label */
         }
         #data-table th:nth-child(2),
         #data-table td:nth-child(2) {
@@ -246,7 +246,7 @@
         }
         #data-table th:nth-child(3),
         #data-table td:nth-child(3) {
-            width: 30%; /* Summary */
+            width: 25%; /* Summary */
         }
         #data-table th:last-child,
         #data-table td:last-child {
@@ -581,7 +581,7 @@ $welcome-message Settings made with NuttyB Configurator https://rcorex.github.io
                         let shortLabel = "";
                         if (label === "Mini Bosses") {
                             shortLabel = "[Mini Bosses]";
-                        } else if (label === "Experimental Wave Changes") {
+                        } else if (label === "Experimental Wave Challenge") {
                             shortLabel = "[Expo Waves]";
                         }
                         groupedOptions.extraRaptors.choices.push({ label: label, value: commandBlock, shortLabel: shortLabel });
