--- a/index.html
+++ b/index.html
@@ -360,11 +360,11 @@
 
         <div id="data-tab" class="tab-content">
             <h2>Configuration Data</h2>
-            <p>This table shows a summary for each configurable option.</p>
+            <p>This table shows a summary for each configurable option</p>
             <table id="data-table">
                 <thead>
                     <tr>
-                        <th>Option Label</th>
+                        <th>Option</th>
                         <th>Status</th>
                         <th>Summary</th>
                         <th>Command Blocks</th>
