--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
             <div class="output-container">
                 <h2>Generated Commands</h2>
-                <p>Copy and Paste both parts separately</p>
+                <p>Copy and paste both parts separately to the lobby</p>
 
                 <div class="command-output-section">
                     <h3>Part 1</h3>
