--- a/index.html
+++ b/index.html
@@ -259,25 +259,24 @@
             background-color: #2c2c2c;
         }
 
-        /* UPDATED: Rebalanced widths */
         #data-table th:first-child,
         #data-table td:first-child {
-            width: 30%; /* Option */
+            width: 28%; /* Option */
         }
         #data-table th:nth-child(2),
         #data-table td:nth-child(2) {
-            width: 17%; /* Status */
+            width: 15%; /* Status */
         }
         #data-table th:nth-child(3),
         #data-table td:nth-child(3) {
-            width: 24%; /* Summary */
+            width: 27%; /* Summary */
         }
         #data-table th:last-child,
         #data-table td:last-child {
-            width: 29%; /* Command Blocks */
+            width: 30%; /* Command Blocks */
         }
 
-        /* UPDATED: Apply truncation to the first three columns */
+        /* Apply truncation to the first three columns */
         #data-table td:first-child,
         #data-table td:nth-child(2),
         #data-table td:nth-child(3) {
@@ -448,6 +447,16 @@
             'Legion NuttyB Evolving Commander',
             'Armada NuttyB Evolving Commander',
             'Cortex NuttyB Evolving Commander',
+        ];
+
+        // NEW: Array to control the order of the right-column checkboxes
+        const rightColumnOrder = [
+            'Cross Faction T2',
+            'T3 Eco',
+            'T3 Builders',
+            'Unit Launchers',
+            'LRPC Rebalance v2',
+            'Mega Nuke'
         ];
 
         const optionsFormColumns = document.getElementById('options-form-columns');
@@ -627,6 +636,15 @@
                          groupedOptions.otherCheckboxes.options.push({ label: label, type: "checkbox", commandBlocks: [commandBlock], default: defaultSelectedLabels.includes(label), column: 'right' });
                     }
                 }
+            });
+
+            // UPDATED: Sort the checkboxes based on the explicit order
+            groupedOptions.otherCheckboxes.options.sort((a, b) => {
+                const indexA = rightColumnOrder.indexOf(a.label);
+                const indexB = rightColumnOrder.indexOf(b.label);
+                const effectiveIndexA = (indexA === -1) ? Infinity : indexA;
+                const effectiveIndexB = (indexB === -1) ? Infinity : indexB;
+                return effectiveIndexA - effectiveIndexB;
             });
 
             formOptionsConfig = [];
@@ -861,11 +879,11 @@
 
                 const labelCell = row.insertCell();
                 labelCell.textContent = item.label;
-                labelCell.title = item.label; // ADDED
+                labelCell.title = item.label;
 
                 const statusCell = row.insertCell();
                 statusCell.textContent = item.status;
-                statusCell.title = item.status; // ADDED
+                statusCell.title = item.status;
 
                 const summaryCell = row.insertCell();
                 summaryCell.textContent = item.summary;
