--- a/index.html
+++ b/index.html
@@ -210,8 +210,6 @@
             font-weight: bold; transition: background-color 0.3s ease;
         }
         #custom-tweak-form button:hover { background-color: #66bb6a; }
-        
-        /* UPDATED: New styles for the availability message */
         #slot-warning-messages p {
             color: #aaa;
             text-align: left;
@@ -230,16 +228,18 @@
         <h1>NuttyB Raptors Configurator</h1>
         
         <div class="tabs">
+            <!-- UPDATED: Reordered tabs -->
             <button class="tab-button active" data-tab="config">Configuration</button>
-            <button class="tab-button" data-tab="data">Data</button>
             <button class="tab-button" data-tab="custom">Custom</button>
+            <button class="tab-button" data-tab="data">Data</button>
             <button class="tab-button" data-tab="links">Links</button>
         </div>
 
         <div id="config-tab" class="tab-content active">
              <p>Select your desired options and copy the generated commands into the lobby</p>
             <div class="settings-container">
-                <h2>Game Options</h2>
+                <!-- UPDATED: Renamed section -->
+                <h2>NuttyB Tweaks</h2>
                 <div id="options-form-columns">
                     <div class="options-column" id="left-column">
                         <p>Loading configuration data...</p>
@@ -249,7 +249,8 @@
             </div>
 
             <div id="custom-settings-container" class="settings-container" style="display: none;">
-                <h2>Custom Options</h2>
+                <!-- UPDATED: Renamed section -->
+                <h2>Custom Tweaks</h2>
                 <div id="custom-options-form-columns">
                     <div class="options-column" id="custom-left-column"></div>
                     <div class="options-column" id="custom-right-column"></div>
