--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
             width: 100%; box-sizing: border-box; background-color: #4a4a4a; color: #f0f0f0;
             border: 1px solid #777; border-radius: 4px; padding: 6px; font-family: sans-serif;
         }
+        /* NEW: Set a specific width for the text and textarea inputs */
+        #custom-tweak-form input[type="text"], 
+        #custom-tweak-form textarea {
+            width: 80%;
+        }
         /* NEW: Rule to override the width for the type dropdown */
         #custom-tweak-form #custom-option-type {
             width: auto;
