--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
         
         .command-output-section { 
             display: grid;
-            grid-template-columns: auto 1fr;
+            /* CHANGED: Set a fixed width for the first column to prevent layout shifts on button text change */
+            grid-template-columns: 130px 1fr;
             gap: 15px;
             align-items: start;
             margin-bottom: 12px;
@@ -151,6 +152,7 @@
             border: none; border-radius: 4px; cursor: pointer;
             font-size: 1em; transition: background-color 0.3s ease;
             white-space: nowrap;
+            text-align: center;
         }
         .copy-button:hover { background-color: #66bb6a; }
         .copy-button:active { background-color: #388e3c; }
