--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         function renderCustomTweaksTable() {
             customTweaksTableBody.innerHTML = '';
             if (customOptions.length === 0) {
-                customTweaksTableBody.innerHTML = '<tr><td colspan="4" style="text-align: center;">No custom tweaks saved.</td></tr>';
+                customTweaksTableBody.innerHTML = '<tr><td colspan="4" style="text-align: center;">No custom tweaks saved</td></tr>';
                 return;
             }
             customOptions.forEach(tweak => {
