--- a/index-dev.html
+++ b/index-dev.html
@@ -365,7 +365,7 @@
             </table>
 
             <h2 style="margin-top: 30px;">Maps and Modes</h2>
-            <p>This table shows the available maps and modes from the configuration file.</p>
+            <p>This table shows the available maps and modes</p>
             <table id="maps-modes-table">
                 <thead>
                     <tr>
